<resources>
    <string name="app_name">E-KP</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_logbook">Logbook</string>
    <string name="title_instansi">Instansi</string>
    <string name="title_laporan">Laporan</string>
    <string name="todo">TODO</string>
    <string name="namaKaprodi">Husnil Kamil</string>
    <string name="teksPilihAktivitas">Pilih aktivitas kamu</string>
    <string name="hello">Halo</string>
    <string name="teksUsername">Username</string>
    <string name="teksPassword">Password</string>
    <string name="teksLogin">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="persetujuan_nilai_kp">Persetujuan Nilai KP</string>
    <string name="titleFragmentLogbook">List Mahasiswa KP</string>
    <string name="nimLogbook">2011523019</string>
    <string name="namaLogbook">fulan bin fulan</string>
    <string name="titikDua">:</string>
</resources>