<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.a2.e_kp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_logbook"
        android:name="id.a2.e_kp.LogbookFragment"
        android:label="@string/title_logbook"
        tools:layout="@layout/fragment_logbook" />

    <fragment
        android:id="@+id/navigation_instansi"
        android:name="id.a2.e_kp.InstansiFragment"
        android:label="@string/title_instansi"
        tools:layout="@layout/fragment_instansi" />

    <fragment
        android:id="@+id/navigation_laporan"
        android:name="id.a2.e_kp.LaporanFragment"
        android:label="@string/title_laporan"
        tools:layout="@layout/fragment_laporan" />
</navigation>