<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >

    <TextView
        android:id="@+id/textHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/textNamaKaprodi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/namaKaprodi"
        android:textColor="#232222"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textHello"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textHello"
        app:layout_constraintTop_toBottomOf="@+id/textHello"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textPilihAktivitasmu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teksPilihAktivitas"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textNamaKaprodi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textNamaKaprodi"
        app:layout_constraintTop_toBottomOf="@+id/textNamaKaprodi"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/imageUsulanKP"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        app:srcCompat="@drawable/usulan_kp" />

    <ImageView
        android:id="@+id/imageMahasiswaKP"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageUsulanKP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageUsulanKP"
        app:layout_constraintTop_toBottomOf="@+id/imageUsulanKP"
        app:srcCompat="@drawable/mahasiswa_kp"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>